--- a/index.html
+++ b/index.html
@@ -8,97 +8,92 @@
 </head>
 <body>
    <main>
-    <h1>Regular</h1>
-    <p>Yeah, yeah
-        I like shining, you be lying
-        I be grinding, you waste time
-        Know you wanna roll with me
-        'Cause you know I put it down
-        When I show up, I'm the one and only
-        No, no, no (No, no)
-        Yeah, pull up in the Jag
-        Haters gon' be mad
-        I be walking with the cheese, that's that queso (Queso, queso)
-        Diamonds dripping, better bring your raincoat (Splash)
-        I got them racks on me (On me)
-        I brought the whole lit team with me
-        I might pull up in a spaceship
-        Hop out it, don't look like I live here
-        And now we in a zone (Oh)
-        Stand too close, might catch a cold
-        Crib came with a gate and a code
-        Yeah, yeah, yeah, yeah
-        Dripping, water faucet, splash (Splash)
-        VVS my diamonds, I don't need no light to shine
-        Iced out both my wrists, now I can barely see the time
-        I just made a million and I'm still not satisfied
-        'Cause I need a bag on the regular
-        I spend a bag on the regular
-        We make the world go
-        (Do-do, do-do-do, do-do-do)
-        My bank account go
-        (Do-do, do-do-do, do-do-do)
-        We make the world go
-        (Do-do, do-do-do, do-do-do)
-        Brrrah!
-        Dinero, peso, yen, lo quiero, I want it
-        I am too rich to compete, so don't compare 'em to me (Yeah, yeah)
-        We are not the same, only one of me (Hey, hey)
-        Hopped out the coupe, the sky is the roof (Roof)
-        My whole team ball (Ball)
-        We never lose, hundreds all blue (Hundreds)
-        We do what we do (Ball)
-        Hopping out casket-fresh, looking like a fashion show (Ayy)
-        Diamonds all on my neck, looking like a water show (Ayy, let's go)
-        She gon' bust it, bust it, bust it, for a real one
-        We gon' bring out the car
-        One way, no stop, to the stars
-        (Aw, yeah, yeah, yeah)
-        Crew fly, Dubai
-        No, it ain't two sides, too high
-        One way to Mars, you better watch yourself
-        I did it all by myself (Go!)
-        And now we in a zone (Ice, ice)
-        Stand too close, might catch a cold (Stand too close)
-        Crib came with a gate and a code (Yeah, yeah, yeah)
-        Yeah, yeah, drippin', water faucet, splash
-        VVS my diamonds, I don't need no light to shine (Oh)
-        Iced out both my wrists, now I can barely see the time (Oh)
-        I just made a million and I'm still not satisfied
-        'Cause I need a bag on the regular (Regular)
-        I spend a bag on the regular (brrrah!)
-        We make the world go
-        (Do-do, do-do-do, do-do-do)
-        My bank account go
-        (Do-do, do-do-do, do-do-do)
-        We make the world go
-        (Do-do, do-do-do, do-do-do)
-        Brrrah! (Yeah, yeah)
-        Dinero, peso, yen, lo quiero, I want it
-        Multi-color diamonds like the rainbow (Yeah, yeah, yeah)
-        B-L -ind your eyes 번져 눈부셔
-        Yeah 자체발광 we flash 주체안돼 let's dance
-        Yeah, this isn't real, this is a regular move
-        머리 어깨 무릎발 무릎발, let's get bounce
-        Oh!
-        Oh! (Oh)
-        Run it up, run it up, run it up (Run it up)
-        No competition in front of us
-        We got the wave, we getting paid (Oh)
-        VVS my diamonds, I don't need no light to shine (Oh)
-        Iced out both my wrists, now I can barely see the time (Oh)
-        I just made millions off it, but I'm still not satisfied
-        'Cause I need a bag on the regular (Regular)
-        I spend a bag on the regular
-        We make the world
-        (Do-do, do-do-do, do-do-do)
-        My bank account go
-        (Do-do, do-do-do, do-do-do)
-        We make the world go
-        (Do-do, do-do-do, do-do-do)
-        Brrrah! (Yeah, yeah)
-        Dinero, peso, yen, yo quiero, I want it
-        Regular</p>
+    <h1>Sticker</h1>
+    <p>Sticker, tagging, tagging, tagging, tagging
+        I got what you need
+        원하는 걸 골라 붙여
+        I can show you need
+        Hip 하지 나란 sticker
+        Bang, bang 한껏 힘을 준 애들 좀 봐 봐
+        NCT we will show you the vibe, hi
+        우리들의 로고를 총 모양으로 woo, woo
+        Baby (yeah, yeah, yeah)
+        겁을 내지 말아 줘 (yeah, yeah, yeah)
+        Think about 네 별이 (yeah, yeah, yeah) oh!
+        잠식되지 않아 정말
+        난 더 환하게 널 만들어 (yeah, yeah, yeah)
+        두 세계 융화라는 거 (yeah, yeah, yeah)
+        지구 말로는 그거 L.O.V.E ah (yeah, yeah, yeah)
+        네 맘이 시키는 대로 말해
+        뜻대로 움직여도 된다는 말이야
+        우리끼린 달달하게 팍 팍 sugar
+        눈치 따윈 보지 말고 네가 boss란 말이야
+        걱정하지 말고 그냥 팍 팍 믿어
+        너만 그래도 돼
+        원해 그럼 너의 것이야 (hoo)
+        내 옆에 너 꼭 붙어 있어봐
+        Like a sticker, sticker, sticker (ho!)
+        내 작품의 주인공은 너니까
+        Like a sticker, sticker, sticker (yeah)
+        골 아픈 세상은 신경 꺼 (꺼)
+        너와 나의 역사만 써 내려가 (hoo, hoo)
+        사랑한단 말 말곤 아껴 둬
+        내 말 맞다면 throw your hands up
+        섣불리 말고 세게 붙여
+        Know that I ain't falling off (falling off)
+        애착심이 솟구치네
+        Who put this all together
+        I'm the sticker for your love
+        그니까 보인다면 ho
+        들린다면 바로 대답해 like baby
+        Baby (yeah, yeah, yeah)
+        이끌리는 느낌 쎄 (yeah, yeah, yeah)
+        Talk about 너의 중력 oh (yeah, yeah, yeah)
+        너무 세게 당겨 난리
+        아주 까리한 내 태도가 (yeah, yeah, yeah)
+        정신도 못 차리는 걸 (yeah, yeah, yeah)
+        거부할 수 없다고 baby girl, ah (yeah, yeah, yeah)
+        You treat me like a boy
+        꿈을 좇는 어른 아이처럼 말이야
+        Fallin' into my love, my sugar
+        들어봐 봐 이건 절대 입에 발린 말이 아니야
+        커져왔던 내 모든 감정들은 널 맞이하기 위한 것
+        네가 boss란 그 말이야 (hoo!)
+        내 옆에 너 꼭 붙어 있어봐
+        Like a sticker, sticker, sticker (ho!)
+        내 작품의 주인공은 너니까
+        Like a sticker, sticker, sticker (yeah)
+        골 아픈 세상은 신경 꺼 (꺼)
+        너와 나의 역사만 써 내려가
+        사랑한단 말 말곤 아껴 둬 (yeah)
+        내 말 맞다면 throw your hands up
+        모든 고민들은 bye, bye, bye
+        흘러가는 대로 bye, bye, bye
+        말해 뭐해 이미 우린 정해져 있는 걸
+        낮과 밤의 존재처럼 자연스러운 걸
+        You will gotta be only one I love
+        This mellow drama
+        너 없인 관객이 하나도 없는 그런 mono drama
+        우리 같이 둘만의 파티를 열어
+        오직 너만 V.I.P.
+        걱정 마 준비가 됐어
+        곧바로 천국을 봐봐
+        Let's go, let's go
+        Roll up to the party, roll up, roll up
+        Roll up to the party, roll up, roll up
+        Roll up to the party
+        Roll up, roll up to the party
+        Roll up to the party
+        Roll up, roll up to the, yeah, yeah, yeah (hoo!)
+        내 옆에 너 꼭 붙어 있어봐
+        Like a sticker, sticker, sticker (oh yeah)
+        내 작품의 주인공은 너니까
+        Like a sticker, sticker, sticker
+        골 아픈 세상은 신경 꺼 (꺼)
+        너와 나의 역사만 써 내려가 (hoo, hoo)
+        사랑한단 말 말곤 아껴 둬 (사랑한단 말 말곤 아껴 둬)
+        내 말 맞다면 throw your hands up (oh yeah, yeah)
+        Like a sticker, sticker, sticker</p>
    </main> 
 </body>
 </html>
